# DesignPatterns

./: .clang-format
bug_zapper/: CMakeLists.txt  package.xml
bug_zapper/bug_zapper/include/: camera.h
bug_zapper/bug_zapper/src/: camera.cpp  main.cpp
bug_zapper/sim/: bug.h  bug_factory.h  bug_sim.cpp  bug_sim.h  main.cpp
factory_method_pattern/: .clang-format  CMakeLists.txt  coffee.h  coffee_factory.h  coffee_machine.h  coffee_variants.h  main.cpp
mvc_ecs_pattern/: CMakeLists.txt
mvc_ecs_pattern/include/: character.h  character_factory.h  components.h  controller.h  entity_manager.h  game.h  menu.h  orc.h  player.h  system.h  troll.h  utils.h  viewer.h
mvc_ecs_pattern/src/: character_factory.cpp  components.cpp  controller.cpp  entity_manager.cpp  game.cpp  main.cpp  menu.cpp  player.cpp  player_factory.cpp  system.cpp  utils.cpp  viewer.cpp
ros2/src/bug_zapper/: CMakeLists.txt  package.xml
ros2/src/bug_zapper/bug_zapper/include/: bug_detector.h  bug_zapper.h
ros2/src/bug_zapper/bug_zapper/launch/: bug_zapper_and_sim.launch.py
ros2/src/bug_zapper/bug_zapper/src/: bug_detector.cpp  bug_tracker.cpp  bug_zapper.cpp  main.cpp
ros2/src/bug_zapper/sim/: bug.h  bug_factory.h  bug_sim.cpp  bug_sim.h  main.cpp
strategy_template_pattern/: README.md  electromagnetic_classifier.sh  electromagnetic_frequency_classifier.py  machine_learning_helpers.py  requirements.txt
